# backend/ops_api/ops/resources/agreement_agency.py
@@ -1,15 +1,12 @@
-from flask import Response, current_app, request
+from flask import Response, current_app
 from flask_jwt_extended import jwt_required
 
-from models import OpsEventType
-from models.utils import generate_events_update
 from ops_api.ops.auth.auth_types import Permission, PermissionType
 from ops_api.ops.auth.decorators import is_authorized
 from ops_api.ops.base_views import BaseItemAPI, BaseListAPI
-from ops_api.ops.schemas.cans import CreateUpdateFundingBudgetSchema, FundingBudgetSchema
+from ops_api.ops.schemas.agreement_agency import AgreementAgencySchema
 from ops_api.ops.services.agreement_agency import AgreementAgencyService
 from ops_api.ops.utils.errors import error_simulator
-from ops_api.ops.utils.events import OpsEventHandler
 from ops_api.ops.utils.response import make_response_with_headers
 
 
@@ -19,70 +16,10 @@ class AgreementAgencyItemAPI(BaseItemAPI):
 
     @is_authorized(PermissionType.GET, Permission.AGREEMENT)
     def get(self, id: int) -> Response:
-        schema = FundingBudgetSchema()
+        schema = AgreementAgencySchema()
         service = AgreementAgencyService(current_app.db_session)
         item = service.get(id)
         return make_response_with_headers(schema.dump(item))
-
-    @is_authorized(PermissionType.PATCH, Permission.AGREEMENT)
-    def patch(self, id: int) -> Response:
-        """
-        Update an AgreementAgency with only the fields provided in the request body.
-        """
-        with OpsEventHandler(OpsEventType.UPDATE_CAN_FUNDING_BUDGET) as meta:
-            service = AgreementAgencyService(current_app.db_session)
-            request_data = request.get_json()
-            # Setting partial to true ignores any missing fields.
-            schema = CreateUpdateFundingBudgetSchema(partial=True)
-            serialized_request = schema.load(request_data)
-
-            old_agreement_agency = service.get(id)
-            serialized_old_agreement_agency = schema.dump(old_agreement_agency)
-            updated_agreement_agency = service.update(serialized_request, id)
-            serialized_updated_agreement_agency = schema.dump(updated_agreement_agency)
-            updates = generate_events_update(
-                serialized_old_agreement_agency,
-                serialized_updated_agreement_agency,
-                updated_agreement_agency.id,
-                updated_agreement_agency.updated_by,
-            )
-            meta.metadata.update({"agreement_agency_updates": updates})
-            return make_response_with_headers(serialized_updated_agreement_agency)
-
-    @is_authorized(PermissionType.PUT, Permission.AGREEMENT)
-    def put(self, id: int) -> Response:
-        """
-        Update an AgreementAgency
-        """
-        with OpsEventHandler(OpsEventType.UPDATE_CAN_FUNDING_BUDGET) as meta:
-            request_data = request.get_json()
-            service = AgreementAgencyService(current_app.db_session)
-            schema = CreateUpdateFundingBudgetSchema()
-            serialized_request = schema.load(request_data)
-
-            old_agreement_agency = service.get(id)
-            serialized_old_agreement_agency = schema.dump(old_agreement_agency)
-            updated_agreement_agency = service.update(serialized_request, id)
-            serialized_updated_agreement_agency = schema.dump(updated_agreement_agency)
-            updates = generate_events_update(
-                serialized_old_agreement_agency,
-                serialized_updated_agreement_agency,
-                updated_agreement_agency.can_id,
-                updated_agreement_agency.updated_by,
-            )
-            meta.metadata.update({"agreement_agency_updates": updates})
-            return make_response_with_headers(serialized_updated_agreement_agency)
-
-    @is_authorized(PermissionType.DELETE, Permission.CAN)
-    def delete(self, id: int) -> Response:
-        """
-        Delete a CANFundingBudget with given id.
-        """
-        with OpsEventHandler(OpsEventType.DELETE_CAN_FUNDING_BUDGET) as meta:
-            service = AgreementAgencyService(current_app.db_session)
-            service.delete(id)
-            meta.metadata.update({"deleted_agreement_agency": id})
-            return make_response_with_headers({"message": "AgreementAgency deleted", "id": id}, 200)
 
 
 class AgreementAgencyListAPI(BaseListAPI):
@@ -95,23 +32,7 @@ class AgreementAgencyListAPI(BaseListAPI):
     def get(self) -> Response:
         service = AgreementAgencyService(current_app.db_session)
         result = service.get_list()
-        funding_budget_schema = FundingBudgetSchema()
-        return make_response_with_headers([funding_budget_schema.dump(funding_budget) for funding_budget in result])
-
-    @is_authorized(PermissionType.POST, Permission.CAN)
-    def post(self) -> Response:
-        """
-        Create a new CANFundingBudget object
-        """
-        with OpsEventHandler(OpsEventType.CREATE_CAN_FUNDING_BUDGET) as meta:
-            service = AgreementAgencyService(current_app.db_session)
-            request_data = request.get_json()
-            schema = CreateUpdateFundingBudgetSchema()
-            serialized_request = schema.load(request_data)
-
-            created_funding_budget = service.create(serialized_request)
-
-            funding_budget_schema = FundingBudgetSchema()
-            serialized_funding_budget = funding_budget_schema.dump(created_funding_budget)
-            meta.metadata.update({"new_can_funding_budget": serialized_funding_budget})
-            return make_response_with_headers(serialized_funding_budget, 201)
+        agreement_agency_schema = AgreementAgencySchema()
+        return make_response_with_headers(
+            [agreement_agency_schema.dump(agreement_agency) for agreement_agency in result]
+        )
