# backend/ops_api/ops/schemas/agreement_agency.py
@@ -1,0 +1,9 @@
+from marshmallow import Schema, fields
+
+
+class AgreementAgencySchema(Schema):
+    id = fields.Integer(required=True)
+    name = fields.String(required=True)
+    abbreviation = fields.String()
+    requesting = fields.Boolean(required=True)
+    servicing = fields.Boolean(required=True)
